<resources>

    <string name="app_name">Sprint 1 Lab 1a</string>
    <string name="logo">MCC Logo</string>
    <string name="user_login">USER NAME</string>
    <string name="user_password">PASSWORD</string>
    <string name="login_button">LOGIN</string>


    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="associates">Associates Degree</string>
    <string name="certificate">Certificate Program</string>

    <string name="errFirst">Invalid First Name.</string>
    <string name="errLast">Invalid Last Name.</string>
    <string name="errPhone">Invalid Phone Number.</string>
    <string name="errDate">Invalid Date selection.</string>
    <string name="errRadio">Timeslot conflict.</string>
    <string name="next_page">Continue</string>


    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="certificate_options">
        <item>Android Certificate</item>
        <item>iOS Mobile Certificate</item>
    </string-array>

    <string-array name="degree_options">
        <item>AAS Digital Media</item>
        <item>AAS Web Development</item>
        <item>AAS Mobile Application Development</item>
    </string-array>



</resources>
