<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".Page2">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="217dp"
        android:layout_height="85dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mcc_logo" />

    <EditText
        android:id="@+id/txtLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/txtFirst"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        android:nextFocusDown="@+id/txtFirst"/>

    <!--
    android:selectAllOnFocus="false"
    -->
    <EditText
        android:id="@+id/txtFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"

        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtLast"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <TextView
        android:id="@+id/txtTitleLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/last_name"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLast" />

    <TextView
        android:id="@+id/txtTitleFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/first_name"
        app:layout_constraintStart_toStartOf="@+id/txtFirst"
        app:layout_constraintTop_toBottomOf="@+id/txtFirst" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/txtTitleFirst"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleLast" />

    <TextView
        android:id="@+id/txtDOB"
        android:layout_width="52dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/date_of_birth"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitlePhone" />

    <Spinner
        android:id="@+id/spnMonths"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:entries="@array/months"
        app:layout_constraintStart_toEndOf="@+id/txtDOB"
        app:layout_constraintTop_toBottomOf="@+id/txtTitlePhone" />

    <EditText
        android:id="@+id/txtYear"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitlePhone" />

    <Switch
        android:id="@+id/swProgram"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:checked="false"
        android:textOff="@string/certificate"
        android:textOn="@string/associates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnMonths" />

    <TextView
        android:id="@+id/txtCert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/certificate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swProgram" />

    <TextView
        android:id="@+id/txtAssociates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/associates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swProgram" />

    <Spinner
        android:id="@+id/spnCertificate"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:entries="@array/certificate_options"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCert" />

    <Spinner
        android:id="@+id/spnAssociates"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:entries="@array/degree_options"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAssociates" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/next_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swProgram" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <EditText
        android:id="@+id/txtDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/day"
        android:inputType="number|date"
        app:layout_constraintEnd_toStartOf="@+id/txtYear"
        app:layout_constraintStart_toEndOf="@+id/spnMonths"
        app:layout_constraintTop_toBottomOf="@+id/txtTitlePhone" />

    <TextView
        android:id="@+id/txtTitlePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

</android.support.constraint.ConstraintLayout>